# sms-cinema

./: .gitignore  LICENSE  PROJECT_INFO.md  README.md  RENAME_GUIDE.md  RENAME_REPO.md  start.sh
sms_agent/: agent.py
sms_frontend/: index.html  package-lock.json  package.json
sms_frontend/src/: Dashboard.jsx  i18n.js
src/dcpplayer/: 0001-CMake-use-pkg-config-for-SDL2_ttf-on-Ubuntu-add-asdc.patch  CMakeLists.txt  config.txt
src/dcpplayer/Cudaj2k/: CDcpParse.cpp  CPlayer.cpp  HeadlessPlayer.cpp  HeadlessPlayer.h  RunDcpPlayer_wx.cpp
src/freedcpplayer/: CMakeLists.txt
